Fix alignment of alert on mobile devices

--- a/src/scenes/Moves/Ppm/PPMPaymentRequest.css
+++ b/src/scenes/Moves/Ppm/PPMPaymentRequest.css
@@ -75,6 +75,10 @@
     width: 50%;
     margin-left: 0px;
   }
+
+  .ppm-payment-request-footer .body--heading {
+    flex-wrap: wrap;
+  }
 }
 
 .allowable-expenses-container li {
